[package]
name = "fedora-updater"
version = "1.1.1"
edition = "2021"
authors = ["khs-kks"]
repository = "https://github.com/khs-kks/fedora-updater"
description = "A command-line utility to update Fedora systems through Flatpak and DNF5"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.43", features = ["full"] }
anyhow = "1.0"
colored = "=3.0.0"