[package]
name = "fedora-updater"
version = "1.4.0"
edition = "2024"
authors = ["khs-kks"]
repository = "https://github.com/khs-kks/fedora-updater"
description = "A command-line utility to update Fedora systems through Flatpak and DNF5"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
colored = "3"